crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__repos_found.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: draw(&editor).backend()
---
"┌ /home/u/.config/sanic-review/config.toml → /home/u/dotfiles/sanic.toml ──────┐"
"│ manual_reviews = true                                                        │"
"│  ┌ Watch in [profile.ring] ───────────────────────────────────────────────┐  │"
"│ [│ checkouts under /src, 2 deep                                           │  │"
"│ #│                                                                        │  │"
"│ #│ [ ] other  every repo in it · one of your orgs                         │) │"
"│ #│ [ ] else  every repo in it · an owner of checkouts found               │  │"
"│ #│ [ ] /src/tool  else/tool                                               │) │"
"│ #│                                                                        │  │"
"│ #│                                                                        │) │"
"│ #│                                                                        │  │"
"│ #│                                                                        │) │"
"│ #│                                                                        │  │"
"│ #│                                                                        │) │"
"│ #│                                                                        │t │"
"│ #│                                                                        │) │"
"│ #│                                                                        │  │"
"│ r│                                                                        │  │"
"│  │                                                                        │  │"
"│ W│                                                                        │──│"
"│ C│ Space pick · Enter add · s scan · d directory · </> depth · Esc cancel │  │"
"│──└────────────────────────────────────────────────────────────────────────┘──│"
"│ ✓ loads            ↵ edit  + add  - remove  u unset  f find  ^S save  ? keys │"
"└──────────────────────────────────────────────────────────────────────────────┘"
