crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__save_diff.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: draw(&editor).backend()
---
"┌ /home/u/.config/sanic-review/config.toml → /home/u/dotfiles/sanic. 2 unsaved ┐"
"│ [github]                                                                     │"
"│ #┌ Save? ─────────────────────────────────────────────────────────────────┐  │"
"│ #│ --- /home/u/.config/sanic-review/config.toml                           │) │"
"│ #│ +++ /home/u/.config/sanic-review/config.toml                           │  │"
"│ #│ @@ -1,6 +1,7 @@                                                        │) │"
"│  │  # Mine.                                                               │  │"
"│ #│  [poll]                                                                │  │"
"│ [│  quiet_secs = 30 # short                                               │  │"
"│ #│ +reconcile_secs = 600                                                  │  │"
"│ r│                                                                        │  │"
"│ #│  [runner]                                                              │  │"
"│ #│  manual_reviews = true                                                 │) │"
"│ #│                                                                        │  │"
"│ q│                                                                        │  │"
"│ #│                                                                        │  │"
"│ #│                                                                        │) │"
"│  │                                                                        │  │"
"│ [│                                                                        │  │"
"│ W│                                                                        │──│"
"│ C│ y write it · j/k scroll · any other key keeps editing                  │  │"
"│──└────────────────────────────────────────────────────────────────────────┘──│"
"│ ✓ loads            ↵ edit  + add  - remove  u unset  f find  ^S save  ? keys │"
"└──────────────────────────────────────────────────────────────────────────────┘"
