crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__shows_every_key_with_defaults_for_the_unset_ones.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: draw(&editor).backend()
---
"┌ Config /home/u/.config/sanic-review/config.toml → /home/u/dotfiles/sanic.toml┐"
"│ github            │  [poll]                                                  │"
"│ poll              │                                                          │"
"│ review_requests   │  reconcile_secs         ‹default: 300›                   │"
"│ runner            │  min_notification_secs  ‹default: 60›                    │"
"│ profiles          │  quiet_secs             30                               │"
"│   ring            │  updated_within_days    ‹default: 14›     hides 0 older  │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                                                                              │"
"│ seconds a PR must go quiet before its review starts                          │"
"│ ✓ loads                        + add · - remove · u unset · ^S save · ? help │"
"└──────────────────────────────────────────────────────────────────────────────┘"
