crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__teams.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: draw(&editor).backend()
---
"┌ /home/u/.config/sanic-review/config.toml → /home/u/dotfiles/sanic.toml ──────┐"
"│ # api_url = "https://api.github.com"                               (default) │"
"│ #┌ Count review requests to these teams ──────────────────────────────────┐  │"
"│ #│ [x] org/storage                                                        │) │"
"│  │ [x] org/zone                                                           │  │"
"│ #│                                                                        │  │"
"│ [│                                                                        │  │"
"│ #│                                                                        │  │"
"│ #│                                                                        │) │"
"│ #│                                                                        │  │"
"│ #│                                                                        │) │"
"│ #│                                                                        │  │"
"│ q│                                                                        │  │"
"│ #│                                                                        │  │"
"│ #│                                                                        │) │"
"│  │                                                                        │  │"
"│ [│                                                                        │  │"
"│ #│                                                                        │  │"
"│ #│                                                                        │) │"
"│ W│                                                                        │──│"
"│ C│ Space tick  ↵ write  Esc cancel                                        │  │"
"│──└────────────────────────────────────────────────────────────────────────┘──│"
"│ ✓ loads            ↵ edit  + add  - remove  u unset  f find  ^S save  ? keys │"
"└──────────────────────────────────────────────────────────────────────────────┘"
